--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,7 @@ h1, p, .name, .bio {
 }	
 h1{
     font-size:6rem;
+    font-weight: bold;
     margin:0;
 }
 a {	
@@ -76,6 +77,11 @@ nav{
 }
 nav a{
     color:#626262;
+    
+}
+nav a.active {
+    font-weight: bold;
+    color: black;
 }
 nav span{
     border-left:3px solid #626262;
@@ -132,5 +138,51 @@ button:hover{
     text-align:center;
 }
 .artist img{
-    width:100%;
+    width:80%;
+}
+
+@media(max-width: 500px){
+
+nav{
+    width: 50%;
+    
+}
+nav a{
+    font-size: 1.75rem;
+}
+h1{
+    font-size: 3.75rem;
+}
+.title-container div{
+    width: 100%;
+    height:35vh;
+    background-size: 200% 220%;
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+.title-container hr{
+    width: 100%;
+}
+.artists-container{
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    margin-bottom: 20%;
+}
+.artist{
+    width: 100%;
+}
+
+.artist img{
+    height: 20vh;
+}
+
+.artist a{
+    font-size: 2rem;
+}
+
+.bio{
+    font-size: 1rem;
+    line-height: 1.2;
+}
 }
